--- a/css/home.css
+++ b/css/home.css
@@ -61,7 +61,15 @@ h1, h2, h3, h4 {
 
 .logo {
   height: 40px;
-  width: auto; /* Maintain aspect ratio */
+  width: auto;
+  filter: brightness(0) invert(1);
+}
+
+.footer-logo {
+  height: 40px;
+  width: auto;
+  margin-bottom: 30px;
+  filter: brightness(0) invert(1);
 }
 
 .nav-links {
